# nino

./: .gitignore  Cargo.toml  build.rs  nino.service
proto/: net.proto
src/: drop.rs  main.rs  net.rs  pwm.rs
src/components/: mod.rs  net.rs  poll.rs  virt.rs
src/sensor/: builtin.rs  builtin_facade.rs  mod.rs
