[package]
name = "nino"
version = "0.1.0"
authors = ["Kim Sevandersson <ksevandersson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
log = "0.4"
env_logger = "0.8.1"
thread-priority = "0.2.0"
sled = "0.34.4"
serde = { version = "1.0.117", features = ["derive"] }
rhai = { version = "0.19.3", features = ["no_module", "only_i32"] }
bincode = "1.3.1"
dashmap = "3.11.10"
parking_lot_core = "0.8.0"

[target.'cfg(target_arch = "arm")'.dependencies.rppal]
version = "0.11.3"

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["std"]

[profile.release]
opt-level = 3
lto = true